--- a/index.html
+++ b/index.html
@@ -390,14 +390,14 @@
           <h1 style="color:white;text-align:center; width: 100%;">Github</h1>
           <div id="gitimg">
             <img width="50%" id="github-stats-card"
-            src="https://github-readme-stats.vercel.app/api?username=Yunuslala&show_icons=true&locale=en&theme=default&layout=compact&theme=dark"
-            alt="Yunuslala">
+            src="https://github-readme-stats.vercel.app/api?username=Sumitamahato&show_icons=true&locale=en&theme=default&layout=compact&theme=dark"
+            alt="Sumita">
             <img width="50%" id="github-top-langs"
-            src="https://github-readme-stats.vercel.app/api/top-langs/?username=Yunuslala&theme=black&layout=compact&theme=dark"
-            alt="Yunuslala">
-          <img width="50%" id="github-streak-stats"
-            src="https://github-readme-streak-stats.herokuapp.com/?user=Yunuslala&theme=white"
-            alt="Yunuslala">
+            src="https://github-readme-stats.vercel.app/api/top-langs/?username=sumitamahato&theme=black&layout=compact&theme=dark"
+            alt="Sumita">
+          <img width="50%"  id="github-streak-stats"
+            src="https://github-readme-streak-stats.herokuapp.com/?user=sumitamahato&theme=white"
+            alt="Sumita">
           </div>
         </div>
       </section>
@@ -417,7 +417,7 @@
                 <h2 class="contsmes">
                   Email:<a href="mahtosumita5@gmail.com" id="email">mahtosumita5gmail.com</a>
                 </h2>
-                <h2 class="contsmes">Github: <a href="https://github.com/Sumitamahato" id="git" target="_blank">
+                <h2 class="contsmes">Github:<a href="https://github.com/Sumitamahato" id="git" target="_blank">
                     sumitamahato</a>
                 </h2>
                 <h2 class="contsmes">From: Jamshedpur Jharkhand</h2>
