--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
                 <div>A Software Developer Based In India.</div>
               </div>
-              <div class="details" >
+              <div class="details" id="user-detail-intro" >
                 I am currently a student at Masai School studying (MERN) Fullstack web Developer. I also know Typescript, MySql, Low Level and High Level Designing of Systems and good uderstanding of AWS cloud Services.
                 I'm passionate about programming and everything technology and have ended-overed to be upto date with the current technologies and skills.
               </div>
