--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
                 <div>A Software Developer Based In India.</div>
               </div>
               <div class="details" id="user-detail-intro" >
-                I am currently a student at Masai School studying (MERN) Fullstack web Developer. I also know Typescript, MySql, Low Level and High Level Designing of Systems and good uderstanding of AWS cloud Services.
-                I'm passionate about programming and everything technology and have ended-overed to be upto date with the current technologies and skills.
+                I am a Full-Stack Developer with expertise in building robust web applications using technologies like NodeJS, React, MongoDB, ExpressJs MySQL, PHP and WordPress. Having a strong track record in developing seamless user experiences and implementing effective API integrations to deliver high-impact functionality.
               </div>
               <div class="more">
-                I design and create beautiful and exceptional websites . I dream of working on websites to be used by billions of people use and having an impact on the world with my work.
-              </div>
+                <!-- I design and create beautiful and exceptional websites . I dream of working on websites to be used by billions of people use and having an impact on the world with my work. -->
+                Currently, Seeking an opportunity to apply my skills in a dynamic environment where I can contribute to innovative projects and grow within a dedicated team.
+               </div>
               <div class="socialsInAbout">
                 <ul>
                   <li class='round' >
@@ -195,7 +195,7 @@
             <div class="techs" id="techsIcon">
               <div id="iconOfstach" class="skills-card">
                 <img id="propsimg" class="skills-card-img" src="https://cdn.svgporn.com/logos/html-5.svg" >
-                <p class="skills-card-name">HTML</p>
+                <p class="skills-card-name">Html</p>
               </div>
               <div id="iconOfstach" class="skills-card">
                 <img id="propsimg" class="skills-card-img" src="https://cdn.svgporn.com/logos/css-3.svg" >
@@ -207,11 +207,11 @@
               </div>
               <div id="iconOfstach" class="skills-card">
                 <img id="propsimg" class="skills-card-img" src="https://cdn.svgporn.com/logos/react.svg" >
-                <p class="skills-card-name">React</p>
+                <p class="skills-card-name">ReactJs</p>
               </div>
               <div id="iconOfstach" class="skills-card">
                 <img id="propsimg" class="skills-card-img" src="https://cdn.svgporn.com/logos/nodejs.svg" >
-                <p class="skills-card-name">Node.js</p>
+                <p class="skills-card-name">NodeJs</p>
               </div>
               <div id="iconOfstach" class="skills-card">
                 <img id="propsimg" class="skills-card-img" src="https://cdn.svgporn.com/logos/express.svg" >
@@ -223,15 +223,15 @@
               </div>
               <div id="iconOfstach" class="skills-card">
                 <img id="propsimg" class="skills-card-img" src="https://tse2.mm.bing.net/th?id=OIP.knt4jZIR6HmZVpzxlgWnswHaHa&pid=Api&P=0" >
-                <p class="skills-card-name">MYSQL</p>
+                <p class="skills-card-name">MySql</p>
               </div>
               <div id="iconOfstach" class="skills-card">
                 <img id="propsimg" class="skills-card-img" src="https://tse3.mm.bing.net/th?id=OIP.b_al7C5p26tbZG4sy-CWqwHaFj&pid=Api&P=0" >
-                <p class="skills-card-name">AWS</p>
+                <p class="skills-card-name">Aws</p>
               </div>
               <div id="iconOfstach" class="skills-card">
                 <img id="propsimg" class="skills-card-img" src="https://tse4.mm.bing.net/th?id=OIP._3vUgoaeHLzrUA0aaotoSQAAAA&pid=Api&P=0" >
-                <p class="skills-card-name">TYPESCRIPT</p>
+                <p class="skills-card-name">TypeScript</p>
               </div>
             </div>
               </div>
